--- a/5월 2주차/5월 10일.MD
+++ b/5월 2주차/5월 10일.MD
@@ -25,5 +25,116 @@ request.setCharacterEncoding("utf-8")
 
 -----------------------------------------------------
 
-## 평가 예정
-- 응용프로그램 활용 - 자바 직렬화 및 API활용
+## 학습목표
+- HTML에서 입력후 서블릿에서 처리후 결과를 출력할 수 있다.
+- HTML에서 입력후 JSP에서 처리후 결과를 출력할 수 있다.
+
+```
+.(실습) 포트폴리오의 첫페이지를 welcome페이지로 지정하고 Form페이지로 이동하여 
+입력후 결과를 출력해주는 페이지로 이동하여 출력해본다.
+```
+
+## 포트폴리오에 반영할 사항
+- 데이터베이스 ERD를 기준으로 입력페이지와 출력페ㅣ지를 추가 작성해 놓는다
+
+
+### jsp html doHandle
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<script type="text/javascript">
+	function fn_validate() {
+		
+		document.frm;
+		let user_id = frm.user_id.value;
+		let user_pw = frm.user_pw.value;
+		
+		if((user_id.length==0) || (user_id == "")){
+			alert("아이디를 입력하셔야 합니다.")
+		}
+		else {
+			frm.method="post";
+			frm.action="Servlet7";
+			frm.submit();
+		}	
+	}
+
+</script>
+</head>
+<body>
+	<h2>로그인</h2>
+	<br>
+	<form action="" method="" name="frm" onsubmit="">
+		아 이 디 : <input type="text" name="user_id"><br>
+		비밀번호 : <input type="password" name="user_pw"><br>
+		<input type="hidden" name="user_address" value="서울시 성동구">
+		<input type="button" onclick="fn_validate()" value="로그인">
+		<input type="reset" value="다시입력">
+	</form>
+</body>
+</html>
+```
+
+```jsp
+package myservlet;
+
+import java.io.IOException;
+import java.io.PrintWriter;
+
+import javax.servlet.ServletException;
+import javax.servlet.annotation.WebServlet;
+import javax.servlet.http.HttpServlet;
+import javax.servlet.http.HttpServletRequest;
+import javax.servlet.http.HttpServletResponse;
+
+@WebServlet("/Servlet7")
+public class Servlet7_handle extends HttpServlet{
+	
+	@Override
+	protected void doGet(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
+		System.out.println("doGet 메서드 호출");
+		doHandle(request, response);
+	}
+	
+	@Override
+	protected void doPost(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
+
+		doHandle(request, response);
+	}
+	
+	
+	protected void doHandle(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
+
+		request.setCharacterEncoding("utf-8");
+		String user_id = request.getParameter("user_id");
+		String user_pw = request.getParameter("user_pw");
+		String user_address = request.getParameter("user_address");
+
+		response.setContentType("text/html;charset=utf-8");
+		PrintWriter out = response.getWriter();
+		String data = "<html>";
+		data += "<body>";
+		data += "아이디: " + user_id;
+		data += "<br>";
+		data += "비밀번호: " + user_pw;
+		data += "<br>";
+		data += "주 소: " + user_address;
+		data += "</body>";
+		data += "</html>";
+		
+		out.print(data);
+		out.close();
+		
+	}
+	
+
+
+
+	
+}
+
+```
+
