--- a/5월 2주차/5월 10일.MD
+++ b/5월 2주차/5월 10일.MD
@@ -38,6 +38,21 @@ request.setCharacterEncoding("utf-8")
 - 데이터베이스 ERD를 기준으로 입력페이지와 출력페ㅣ지를 추가 작성해 놓는다
 
 
+### 이론
+```
+<!-- 
+	Get :	- 전송할 데이터를 문자열 형태로 URL의 뒤에 인수로 붙여서 전송하는 방식
+			- 보안성이 없어 누구나 전송내용을 볼 수 있다.
+			- 최대 전송크기는 240바이트이다.
+			- 용량이 적을 경우에 사용한다.
+			- 서버의 처리가 지연되면 중복해서 요청되는 경우가 발생될 수 있다.
+			
+	Post :	- 파일의 형태로 전송됨으로 URL상에 나타나지 않아 보안성이 있다.
+			- Get방식에 비해 대용량의 데이터를 전송할때 사용한다.
+ -->
+```
+
+
 ### jsp html doHandle
 ```html
 <!DOCTYPE html>
