--- a/5월 2주차/5월 10일.MD
+++ b/5월 2주차/5월 10일.MD
@@ -53,7 +53,7 @@ request.setCharacterEncoding("utf-8")
 ```
 
 
-### jsp html doHandle
+### servlet html doHandle
 ```html
 <!DOCTYPE html>
 <html>
@@ -153,3 +153,140 @@ public class Servlet7_handle extends HttpServlet{
 
 ```
 
+### jsp html 회원정보 넣어보기
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
+<title>Insert title here</title>
+<style type="text/css">
+	table{
+		padding: 0;
+		border-collapse: collapse;
+	}
+	
+	input{
+		border: 0;
+		width: 400px;
+	}
+	
+	.ch{
+		width: 10px;
+	}
+	
+	.btn{
+		width: 60px;
+		background-color: lightgray;
+	}
+	
+	textarea{
+		border: 0;
+		margin: 0;
+		height: 100px;
+	}
+	
+	
+</style>
+</head>
+<body>
+	<div class="container-md mt-5 text-center">
+		<h3>회원정보</h3>
+		<form action="http://localhost:8080/Ch03/jsp/jsp5.jsp" method="get">
+			<table border="1" class="mt-3" style="margin: 0 auto">
+				<tr>
+					<td>아 이 디</td><td><input type="text" name="id"></td>
+				</tr>
+				<tr>
+					<td>비밀번호</td><td><input type="password" name="pw"></td>
+				</tr>
+				<tr>
+					<td>비밀번호확인</td><td><input type="password" name="pw2"></td>
+				</tr>
+				<tr>
+					<td>취 미</td>
+					<td align="left">
+						<input class="ch" type="checkbox" name="hobby" value="climbing">등산&nbsp;&nbsp;
+						<input class="ch" type="checkbox" name="hobby" value="sport">운동&nbsp;&nbsp;
+						<input class="ch" type="checkbox" name="hobby" value="reading">독서&nbsp;&nbsp;
+						<input class="ch" type="checkbox" name="hobby" value="traveling">여행&nbsp;&nbsp;
+					</td>
+				</tr>
+				<tr>
+					<td>종 교</td>
+					<td>
+						<select name="religion">
+							<option value="atheism">무교</option>
+							<option value="Christaianity">기독교</option>
+							<option value="Buddhism">불교</option>
+							<option value="Catholicism">천주교</option>
+						</select>
+					</td>
+				</tr>
+				<tr>
+					<td>자기소개</td>
+					<td>
+						<textarea rows="10" cols="49" name="introduction"></textarea>
+					</td>
+				</tr>
+				<tr>
+					<td colspan="2">
+						<input class="btn" type="submit" value="전송">&nbsp;&nbsp;
+						<input class="btn" type="reset" value="취소">
+					</td>
+				</tr>
+			</table>
+		</form>
+	</div>
+</body>
+</html>
+
+
+```
+
+```jsp
+<%@ page language="java" contentType="text/html; charset=UTF-8"
+    pageEncoding="UTF-8"%>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+	<%
+		request.setCharacterEncoding("utf-8");
+		String id = request.getParameter("id");
+		String pw = request.getParameter("pw");
+		
+		String[] hobby = request.getParameterValues("hobby");
+		String[] religion = request.getParameterValues("religion");
+		String introduce = request.getParameter("introduction");
+		
+		response.setContentType("text/html;charset=utf-8");
+		
+	%>
+	
+	아 이 디 : <%=id %><p>
+	비밀번호: <%=pw %><p>
+	취&nbsp;&nbsp;&nbsp;&nbsp;미:
+	<%
+		for(int i=0;i<hobby.length;i++){
+			if(i<hobby.length-1){
+				out.print(hobby[i]+",");
+			}else{
+				out.print(hobby[i]);
+			}
+		}
+	%><p>
+	종&nbsp;&nbsp;&nbsp;&nbsp;교:
+	
+	<%
+	
+	%>
+	자기소개: <%=introduce %>
+	
+</body>
+</html>
+```
