--- a/5월 2주차/5월 10일.MD
+++ b/5월 2주차/5월 10일.MD
@@ -35,7 +35,7 @@ request.setCharacterEncoding("utf-8")
 ```
 
 ## 포트폴리오에 반영할 사항
-- 데이터베이스 ERD를 기준으로 입력페이지와 출력페ㅣ지를 추가 작성해 놓는다
+- 데이터베이스 ERD를 기준으로 입력페이지와 출력페이지를 추가 작성해 놓는다
 
 
 ### 이론
