--- a/5월 2주차/5월 11일.MD
+++ b/5월 2주차/5월 11일.MD
@@ -1,11 +1,19 @@
 # Review
-
+입력 : HTML -> 출력: Java Servlet
+- HTML의 action은 서블릿이름으로 명시한다.
+- INPUT의 name이 파라미터로 전송됨을 확인한다.
+- JavaScript 이벤트와 연결
 
 
 
 -----------------------------------------------------
 
 ## 학습목표
+- 오류처리 구현
+- Get/Post방식에 대해 이해
+- Request와 Response 객체의 기능(메서드)들을 숙지하고 활용
+- 페이지 전환방식 (forward, redirect)차이를 이해하고 적용할 수 있다.
 
 
 ## 포트폴리오에 반영할 사항
+- 데이터베이스 ERD를 기준으로 입력페이지와 출력페이지를 추가 작성해놓는다.
