--- a/5월 2주차/5월 11일.MD
+++ b/5월 2주차/5월 11일.MD
@@ -17,3 +17,45 @@
 
 ## 포트폴리오에 반영할 사항
 - 데이터베이스 ERD를 기준으로 입력페이지와 출력페이지를 추가 작성해놓는다.
+
+
+### 이론들
+```
+1. 질의 문자열
+  - 클라이언트가 웹서버에 정보를 요청할 떄 사용하는 문자열
+  - 규칙
+    . name = value형식으로 전달
+    . 여러개의 쌍으로 전달될때는 &를 구분자로 한다.
+    . 영문자, 숫자, 일부 특수문자는 그대로 전달 가능하지만
+    . 그외의 문자(한글)등은 %기호와 함께 전환하여 전달된다.
+      (서버에서 복원처리를 해주어야 한다.)
+    . 공백문자는 +기호로 변경되어 전달된다.
+    . URL은 공백을 포함할 수 없는 특징을 갖고, 있다면 공백앞까지를 URL로 인식한다.
+
+2. JSP에 내장되어 있는 객체
+    . request           : 클라이언트의 요청정보에 대한 객체
+    . response          : 웹서버에서 클라이언트에 보내는 응답정보 객체
+   
+    . pageContext       : 페이지에 대한 정보관리 객체(JSP페이지 당 1개 1:1 대응)
+    . session           : 세션정보관리
+        * HTTP프로토콜의 특징 중 하나로 무상태성(Statless)가 있다.
+            - 한번 요청하고 한번 응답 받으면 접속이 끊기는 것
+        * 세션이란 쿠키를 기반으로 일정시간동안 동일한 브라우저로부터 들어오는 요청
+          하나의 상태로 보고 그 상태를 유지하는 기술이다.
+          
+    . application       : 웹 어플리케이션에 대한 정보관리
+    . exception         : 예외처리에 이용되는 객체. 
+                          오직 에러페이지에서만 import하여 사용할 수 있다.
+    
+```
+
+
+
+
+
+
+
+
+
+
+
