--- a/5월 2주차/5월 11일.MD
+++ b/5월 2주차/5월 11일.MD
@@ -46,7 +46,10 @@
     . application       : 웹 어플리케이션에 대한 정보관리
     . exception         : 예외처리에 이용되는 객체. 
                           오직 에러페이지에서만 import하여 사용할 수 있다.
-    
+
+3. Request 객체
+    클라이언트에 관련된 정보
+
 ```
 
 
