--- a/5월 2주차/5월 11일.MD
+++ b/5월 2주차/5월 11일.MD
@@ -48,8 +48,20 @@
                           오직 에러페이지에서만 import하여 사용할 수 있다.
 
 3. Request 객체
-    클라이언트에 관련된 정보
+    . 클라이언트에 관련된 정보, 서버에 관련된 정보, 클라이언트가 요청한 데이터, 쿠키정보 등
 
+    1) 웹서버 관련 정보
+      . 클라이언트 IP주소              - getRemoteAddr()   ip v4, ip v6
+      . 요청한 정보의 길이             -  getContentLength()
+      . 요청할때 사용한 문자열 인코딩   -  getCharacterEncoding()
+      . 요청받은 문자열을 인코드 설정   -  setCharacterEncoding("utf-8")
+      . 전송할때 사용한 문서타입        -  getContentType()
+      . 전송할때 사용한 전송방식        -  getMethod()
+      . 전송할때 사용한 URL경로        - getRequestURL()
+  
+    2) 서버관련정보
+      . 서버의 주소      - getServerName()
+      . 연결한 포트번호  - getServerPort()
 ```
 
 
