--- a/5월 2주차/5월 11일.MD
+++ b/5월 2주차/5월 11일.MD
@@ -50,7 +50,7 @@
 3. Request 객체
     . 클라이언트에 관련된 정보, 서버에 관련된 정보, 클라이언트가 요청한 데이터, 쿠키정보 등
 
-    1) 웹서버 관련 정보
+    1)  웹서버 관련 정보
       . 클라이언트 IP주소              - getRemoteAddr()   ip v4, ip v6
       . 요청한 정보의 길이             -  getContentLength()
       . 요청할때 사용한 문자열 인코딩   -  getCharacterEncoding()
@@ -59,17 +59,17 @@
       . 전송할때 사용한 전송방식        -  getMethod()
       . 전송할때 사용한 URL경로        - getRequestURL()
   
-    2) 서버관련정보
+    2)  서버관련정보
       . 서버의 주소      - getServerName()
       . 연결한 포트번호  - getServerPort()
+      
+    3)  클라이언트가 웹서버에 전송한 데이터
+      . 폼의 name의 한개의 값을 읽기        - getParameter()        >>  String
+      . 폼에서 보내진 복수의 값을 읽기       - getParameterValues()  >>  String[]
+      . 웹 브라우저가 전송한 파라미터의 name들 읽기  - getParameterNames() >>  Enumeration
+    
+    
 ```
-
-
-
-
-
-
-
 
 
 
