--- a/5월 2주차/5월 11일.MD
+++ b/5월 2주차/5월 11일.MD
@@ -21,7 +21,7 @@
 
 ### 이론들
 ```
-1. 질의 문자열
+1.  질의 문자열
   - 클라이언트가 웹서버에 정보를 요청할 떄 사용하는 문자열
   - 규칙
     . name = value형식으로 전달
@@ -32,22 +32,23 @@
     . 공백문자는 +기호로 변경되어 전달된다.
     . URL은 공백을 포함할 수 없는 특징을 갖고, 있다면 공백앞까지를 URL로 인식한다.
 
-2. JSP에 내장되어 있는 객체
+2.  JSP에 내장되어 있는 객체
     . request           : 클라이언트의 요청정보에 대한 객체
     . response          : 웹서버에서 클라이언트에 보내는 응답정보 객체
    
-    . pageContext       : 페이지에 대한 정보관리 객체(JSP페이지 당 1개 1:1 대응)
-    . session           : 세션정보관리
+    . pageContext       : 페이지에 대한 정보관리 객체(JSP페이지 당 1개 1:1 대응객체) - PageContextJSP
+   
+    . session           : 세션정보관리                                            - HTTPSession
         * HTTP프로토콜의 특징 중 하나로 무상태성(Statless)가 있다.
             - 한번 요청하고 한번 응답 받으면 접속이 끊기는 것
         * 세션이란 쿠키를 기반으로 일정시간동안 동일한 브라우저로부터 들어오는 요청
           하나의 상태로 보고 그 상태를 유지하는 기술이다.
           
     . application       : 웹 어플리케이션에 대한 정보관리
-    . exception         : 예외처리에 이용되는 객체. 
+    . exception         : 예외처리에 이용되는 객체.                                - Throwable zmfotm
                           오직 에러페이지에서만 import하여 사용할 수 있다.
 
-3. Request 객체
+3.  Request 객체
     . 클라이언트에 관련된 정보, 서버에 관련된 정보, 클라이언트가 요청한 데이터, 쿠키정보 등
 
     1)  웹서버 관련 정보
@@ -68,6 +69,65 @@
       . 폼에서 보내진 복수의 값을 읽기       - getParameterValues()  >>  String[]
       . 웹 브라우저가 전송한 파라미터의 name들 읽기  - getParameterNames() >>  Enumeration
     
+    4)  request객체에 데이터 저장관리
+      . 데이터 저장                  - setAttribute(String name, Object obj)
+      . 데이터 읽기                  - setAttribute(String name) >>  object
+      . 전체 데이터 읽기             - getAttributeNames() >>  
+      . 데이터 삭제                  - removeAttribute(String name)
+      
+    5)  세션
+      . 요청한 클라이언트가 사용한 session객체를 읽기,
+        만약 반환할 세션객체가 없으면 생성해서 반환해준다.  - getSession()
+      . 요청받은 서버가 그전에 클라이언트에게 보냈던 모든 쿠키 읽기 - getCookies() - cookies[]
+      
+    6)  서블릿객체
+      . 서버가 시작될때 웹 애플리케이션 단위로 생성되는 ServletContext객체의 반환 - getServletContext()
+      
+4.  response객체
+    1) 응답 전송방식과 상태/오류
+        . HTTP응답상태 코드 설정    - sendStatus(int 상태코드)
+        
+        . 응답할 내용의 MIME타입 설정 - setContentType(String type) , 
+        (*Multipurpose Internet Mail Extensions이고 (파일변환)이라는 뜻)
+        
+        . MIME타입 읽기            -  getContentType()
+        . 응답할 문자 인코딩방식 설정 - setCharacterEncoding()
+        . 응답할 문자 인코딩방식 읽기 - getCharacterEncoding()
+        . 에러응답을 클라이언트에 전송 - snedError(int status_code)
+
+    2)  출력버퍼설정
+        . 출력버퍼 크기설정         - sendBufferSize(int size)
+        . 버퍼크기 알아보기         - flushBuffer()
+        
+    3)  페이지 전환
+        . 현재 페이지를 다른페이지로 이동 - sendRedirect(String location
+        
+5.  Forward와 Redirect 차이
+    1)  Forward
+        . URL이 변경되지 않는다.
+        . request, response가 유지된다.
+        . request에 들어 있는 값이 유지된다.
+        . 데이터설정과 유지를 위해서 setAttribute() getAttribute()를 활용한다
+        . request.forward(location)
+        
+        내가 정리
+        . 서버 내부에서 직접 요청을 전달하는 방식으로, 요청과 응답 객체가 동일한 쓰레드에서 처리하기에
+        . 요청 객체의 속성(Attribute)을 그대로 가져와서 사용할 수 있다.
+        
+    2)  Redirect
+        . 웹서버가 웹브라우저에게 다른 페이지로 이동하라고 지시하는 것을 의미한다.
+        . URL이 변경된다.
+        . 요청시마다 request, response객체가 새로 생성된다.
+        . getAttribute()를 사용할 수 없다.   getParameter()를 시용해야 한다.
+        . 주소줄에 한글/특수문자가 존재한다면 반드시 URLEndcode를 해서 전송해야 한다.
+        
+        내가 정리
+        . 서버에서 새로운 요청을 생성하여 브라우저에게 보내는 방식으로, 요청과 응답 객체가 서로 다른
+        . 쓰레드에서 처리됨. 새로운 요청이 생성되기에 요청 객체의 속성은 초기화된다 그렇기에
+        . getAttribute() 메서드로 요청 객체의 속성을 가져올 수 없다
+        . 따라서 속성 값을 새로운 요청에 전달하기 위해 쿼리 파라미터나 세션등을 사용해야 한다.
+        . 쿼리 파라미터를 사용하면 URL 뒤에 속성 값이 추가되어 전달되며, 세션을 사용하면 새로운 요청에
+        . 서도 속성 값을 유지할 수 있다.
     
 ```
 
