--- a/5월 2주차/5월 11일.MD
+++ b/5월 2주차/5월 11일.MD
@@ -127,7 +127,19 @@
         . getAttribute() 메서드로 요청 객체의 속성을 가져올 수 없다
         . 따라서 속성 값을 새로운 요청에 전달하기 위해 쿼리 파라미터나 세션등을 사용해야 한다.
         . 쿼리 파라미터를 사용하면 URL 뒤에 속성 값이 추가되어 전달되며, 세션을 사용하면 새로운 요청에
-        . 서도 속성 값을 유지할 수 있다.
+        . 서도 속성 값을 유지할 수 있다
+        
+ 6. 요청방식에 따른 처리
+    최초요청 >> init()실행 >> 요청시 마다 request객체생성 / response 객체생성
+                          >> 요청시에 요청정보 ~~~ 응답정보 생성
+                          
+                              요청방식 Request-URL    HTTP버전    ~~~~    HTTP버전   상태코드    상태텍스트  
+                                          헤             더                             헤         더
+                                          바             디                             바         디              
+    1) Get
+    2) Post
+    3) Put
+    4) Delete
     
 ```
 
