--- a/5월 2주차/5월 11일.MD
+++ b/5월 2주차/5월 11일.MD
@@ -133,13 +133,35 @@
     최초요청 >> init()실행 >> 요청시 마다 request객체생성 / response 객체생성
                           >> 요청시에 요청정보 ~~~ 응답정보 생성
                           
+                                        (요청 메지)                            (응답 메세지)
                               요청방식 Request-URL    HTTP버전    ~~~~    HTTP버전   상태코드    상태텍스트  
                                           헤             더                             헤         더
-                                          바             디                             바         디              
-    1) Get
-    2) Post
-    3) Put
-    4) Delete
+                                          바             디                             바         디
+                                          
+                                * Get / book/A        HTTP/1.1            HTTP/1.1    200         OK 
+                                
+      *******
+                                      프로토콜    서버주소            포트번호                  서버자원정보(URI)
+                                        HTTP://   localhost          0~10 사용예약포트(사용x)
+                                                www.mysite.com       8080 : 웹서버포트 
+                                                                        (http://접속시 자동으로 80으로 인식)
+                                
+    1) Get  - 검색
+              . URL로 데이터를 넣어 요청할떄
+              . <a href=""> 태그를 클릭하여 요청하는 경우
+              . 폼 태그에 method속성을 생략할 경우
+              
+              . 255바이트 미만, 노출되도 상관없는것, 속도가 빠르다
+              . 질의 문자열을 요청줄에 포함하여 전달한다.
+              
+    2) Post - 초기화 / 추가 / 삭제
+              . 요청정보를 바디에 포함하여 전달한다.
+              . 데이터의 길이 제한이 없다.
+              . 속도는 상대적으로 느리다
+              . 폼태그를 사용해야만 요청할 수 있다.
+    
+    3) Put  - 수정(update)에 주료사용 
+    4) Delete - 서버에서 리소르를 삭제 하는 경우
     
 ```
 
