--- a/5월 2주차/5월 11일.MD
+++ b/5월 2주차/5월 11일.MD
@@ -145,6 +145,11 @@
                                         HTTP://   localhost          0~10 사용예약포트(사용x)
                                                 www.mysite.com       8080 : 웹서버포트 
                                                                         (http://접속시 자동으로 80으로 인식)
+                                                                        
+                                        * 서버자원정보(URI)
+                                          - URL에서 포트번호 다음부터가 URI이다.
+                                            >>  URI정보로 웹서버에서 클라이언트가 요청한 문서를 찾아서 실행후
+                                                결과(또는 파일)을 클라이언트에 응답한다.
                                 
     1) Get  - 검색
               . URL로 데이터를 넣어 요청할떄
@@ -162,6 +167,24 @@
     
     3) Put  - 수정(update)에 주료사용 
     4) Delete - 서버에서 리소르를 삭제 하는 경우
+    
+7.  상태코드
+    요청처리 결과를 숫자 세자리로 나타낸다.
+    즉, 클라이언트요청에 대한 처리 결과를 의미한다.
+    
+    . 1XX : 조건부 응답
+    . 2XX : 성공
+    . 3XX : 리다이렉션 완료
+    . 4XX : 요청보류
+    . 5XX : 서버오류에 관한 코드
+    
+  - 200 : 클라이언트의 요청처리 성공
+  - 400 : 클라이언트의 문법적인 오류 등 잘못된 요청으로 서버가 해석불가
+  - 401 : 클라이언트가 잘못된 인증정보를 헤더에 넣었을 경우
+  - 403 : 사용자 허가모드 오류 - 페이지 접근제한 거부
+  - 404 : 요청한 문서가 존재하지 않음  - 경로확인
+  - 405 : 서비스요청방식 지원 x
+  - 500 : 
     
 ```
 
