--- a/5월 2주차/5월 11일.MD
+++ b/5월 2주차/5월 11일.MD
@@ -136,7 +136,11 @@
                                         (요청 메지)                            (응답 메세지)
                               요청방식 Request-URL    HTTP버전    ~~~~    HTTP버전   상태코드    상태텍스트  
                                           헤             더                             헤         더
+                                      Accept, accept-Encoding                       Cashe-Control, Connection
+                                      Accipt-language, User-Agent                   Content-Encoding, content-type
+                                      Cashe-Control,,,                              Date, Server
                                           바             디                             바         디
+                                            (post방식 내용)
                                           
                                 * Get / book/A        HTTP/1.1            HTTP/1.1    200         OK 
                                 
