--- a/5월 2주차/5월 11일.MD
+++ b/5월 2주차/5월 11일.MD
@@ -120,6 +120,7 @@
         . 요청시마다 request, response객체가 새로 생성된다.
         . getAttribute()를 사용할 수 없다.   getParameter()를 시용해야 한다.
         . 주소줄에 한글/특수문자가 존재한다면 반드시 URLEndcode를 해서 전송해야 한다.
+        . response.sendRedirect()
         
         내가 정리
         . 서버에서 새로운 요청을 생성하여 브라우저에게 보내는 방식으로, 요청과 응답 객체가 서로 다른
