--- a/5월 2주차/5월 11일.MD
+++ b/5월 2주차/5월 11일.MD
@@ -193,6 +193,13 @@
     
 ```
 
+### Run configurations
+- Apache Tomcat 더블 클릭후
+- new Configuration에
+```
+Arguments - VM arguments에 아래 넣기
 
+-Djava.net.preferIPv4Stack="true"
+```
 
 
