--- a/5월 2주차/5월 11일.MD
+++ b/5월 2주차/5월 11일.MD
@@ -190,6 +190,25 @@
   - 404 : 요청한 문서가 존재하지 않음  - 경로확인
   - 405 : 서비스요청방식 지원 x
   - 500 : 
+  
+  
+  <!-- 
+	ip v4 , ip v6
+	
+		- ip4
+				0:0:0:0:0:0:0:1 >> 32비트  >> 43억개 주소
+				
+		- ip6
+				128비트  >> 43억*43억*43억*43억개의 주소 >> IoT기능
+ -->
+ 
+ 		// 헤더속에 있는 모든 속성들을 가져와본다.
+		/* Enumeration en = request.getHeaderNames();
+				. boolean hasMoreElements()
+				. String nextElement()
+		
+		
+		 */
     
 ```
 
