--- a/5월 2주차/5월 11일.MD
+++ b/5월 2주차/5월 11일.MD
@@ -93,7 +93,7 @@
         . MIME타입 읽기            -  getContentType()
         . 응답할 문자 인코딩방식 설정 - setCharacterEncoding()
         . 응답할 문자 인코딩방식 읽기 - getCharacterEncoding()
-        . 에러응답을 클라이언트에 전송 - snedError(int status_code)
+        . 에러응답을 클라이언트에 전송 - sendError(int status_code)
 
     2)  출력버퍼설정
         . 출력버퍼 크기설정         - sendBufferSize(int size)
@@ -209,6 +209,15 @@
 		
 		
 		 */
+		 
+<!-- 
+	오류처리
+		- 에러가 발생할 수 있는 페이지 : errorPage = "에러발생시 이동할 페이지"
+		- 에러발생에 따른 보여줄 페이지 : isError = "true"
+		
+		- web.xml에서 오류코드와 페이지 매핑
+
+ -->		 
     
 ```
 
