--- a/5월 2주차/5월 11일.MD
+++ b/5월 2주차/5월 11일.MD
@@ -231,3 +231,56 @@ Arguments - VM arguments에 아래 넣기
 ```
 
 
+### redirect 해보기
+```jsp
+<%@page import="java.net.URLEncoder"%>
+<%@ page language="java" contentType="text/html; charset=UTF-8"
+    pageEncoding="UTF-8"%>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+	<%
+		String url = "http://127.0.0.1:8080/Ch04/jsp5_2.jsp?name=";
+		
+		String e_name = URLEncoder.encode("홍길동","utf-8");
+		String e_addr = URLEncoder.encode("마포구","utf-8");
+		response.sendRedirect(url+e_name+"&addr="+e_addr);
+	%>
+
+</body>
+</html>
+```
+
+```jsp
+<%@ page language="java" contentType="text/html; charset=UTF-8"
+    pageEncoding="UTF-8"%>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+	<h3>sendRedirect로 이동해온 페이지 입니다. 데이터를 읽어보세요!!</h3>
+	<%
+		// getAttribute()
+		String name1 = (String)request.getAttribute("e_name");
+		String addr1 = (String)request.getAttribute("e_addr");
+		out.print("getAttribute: 이름"+name1+", 나이: "+addr1);
+		
+		out.print("<br>");
+		
+		// getParameter()
+		String name2 = (String)request.getParameter("name");
+		String addr2 = (String)request.getParameter("addr");
+		out.print("getParameter: 이름"+ name2+", 나이: "+ addr2);
+		
+		
+	%>
+</body>
+</html>
+```
