--- a/5월 2주차/5월 11일.MD
+++ b/5월 2주차/5월 11일.MD
@@ -284,3 +284,64 @@ Arguments - VM arguments에 아래 넣기
 </body>
 </html>
 ```
+
+### xml값 가져오기 및 에러처리
+```jsp
+<%@page import="java.util.Enumeration"%>
+<%@ page language="java" contentType="text/html; charset=UTF-8"
+    pageEncoding="UTF-8"%>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+	<!-- 코드에서는 자동으로 처리되므로 errorPage를 설정하지 않아도 된다. -->
+	
+	<%
+		Enumeration e = application.getInitParameterNames();
+		// getInitParameterNames() - web.xml에 설정해 놓은 파라미터의 name을 읽어온다.
+	
+		if(e.hasMoreElements() == true){
+			while(e.hasMoreElements()){
+				String name = (String)e.nextElement();
+				out.print(application.getInitParameter(name));
+				out.print("<br>");
+			}
+		}
+		
+		if(e.hasMoreElements()==false){
+			out.print("web.xml에 설정해 놓은 초기 파라미터가 존재하지 않습니다");
+		}
+	%>
+	
+</body>
+</html>
+```
+
+```xml
+<?xml version="1.0" encoding="UTF-8"?>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" version="3.1">
+  <display-name>Ch05</display-name>
+  <welcome-file-list>
+    <welcome-file>index.html</welcome-file>
+    <welcome-file>index.htm</welcome-file>
+    <welcome-file>index.jsp</welcome-file>
+    <welcome-file>default.html</welcome-file>
+    <welcome-file>default.htm</welcome-file>
+    <welcome-file>default.jsp</welcome-file>
+  </welcome-file-list>
+  
+  <error-page>
+  	<error-code>500</error-code>
+  	<location>/error/Error500.jsp</location>
+  </error-page>
+  
+  <!-- <context-param>
+  		<param-name>name</param-name>
+  		<param-value>홍길동</param-value>
+  </context-param> -->
+  
+</web-app>
+```
