--- a/5월 2주차/5월 12일.MD
+++ b/5월 2주차/5월 12일.MD
@@ -47,3 +47,43 @@ Get/Post/Put/Delete
 
 ## 포트폴리오에 반영할 사항
 - 데이터베이스 ERD를 기준으로 입력페이지와 출력페이지를 추가 작성해놓는다.
+
+
+### 이론
+```jsp
+<!-- 
+	내장객체
+		. Request
+		. Response
+		. pageContext ; JSP페이지당 1:1 대응되는 객체이다.
+		. application ; 웹 어플리케이션에 대한 관리객체이다.
+		. session
+		. out	:	출력스트림 객체이다.
+		. exception : 예외처리 객체이다.
+		. config : JSP페이지에 대한 설정정보관리 객체이다.
+		. 
+			
+	pageContext		
+		. 다른 내장객체에 접근할 수 있게 해주고
+		. 현재 페이지에서 다른 페이지로 흐름을 제어하는 기능을 갖고 있다.
+		
+		- getRequest()	: request 내장객체를 반환
+		- getResponse()	: response 내장객체를 반환
+		- getOut()		: out내장객체를 반환
+		- getException(): exception 내장객체를 반환
+		- getServletConfig() : config(설정) 내장객체를 반환
+		- getServletContext() : application 내장객체 반환
+		
+		- forward() : 현재의 페이지에서 다른 페이지로 넘긴다.
+			. 클라이언트가 요청한 request, response객체로 함께 넘기고 제어권도 같이 넘긴다.
+			. 주소줄의 url주소가 변경되지 않는다.
+			. 버퍼가 채워져서 중간에 전송이 되었다면 ... forward되지 않는다.
+			
+		- include() : 현재의 페이지에 다른 페이지를 포함시킨다.
+			. <@include page = "">
+			. include()
+			. <jsp:include>
+			
+			. request와 response객체를 다른 페이지로 전달한 후 그 결과를 다시 이전 페이지로 반환받아서 클라이언트에게 응답한다.
+ -->
+```
