--- a/5월 2주차/5월 12일.MD
+++ b/5월 2주차/5월 12일.MD
@@ -86,4 +86,30 @@ Get/Post/Put/Delete
 			
 			. request와 response객체를 다른 페이지로 전달한 후 그 결과를 다시 이전 페이지로 반환받아서 클라이언트에게 응답한다.
  -->
+ 
+ <!-- 
+	application 객체
+		. 웹 어플리케이션당 한개의 객체만 생성한다.
+		. 특정 웹 어플리케이션에 포함된 모든 JSP페이지는 하나의 application객체를 공유한다.
+		. 현재 웹 어플리케이션이 실행되고 있는 서버의 자원정보를 담고 있다.
+		. 실행시 발생한 이벤트들에 대한 로그를 저장하기 위한 기능제공
+		. 객체의 공유도 가능하게 해준다. 
+		
+		- getInitParameter(String str) : web.xml에 설정한 파라미터값을 읽어온다
+		- getInitParameNames() : web.xml에 설정한 파라미터 전체를 읽어온다.(Enumeration)
+		- getAttributeNames() : application객체의 속성들을 가져온다.
+		
+		- getMajorVersion(); 컨테이너가 지원하는 Major버전
+		- getMinorVersion();
+		
+		- getRealPath(String path) : 실제경로를 가져온다.
+		- getContext(String path) : 자원의 경로정보
+		- getServerInfo() : JSP컨테이너의 이름과 버전을 가져온다
+ -->
+ 
 ```
+
+
+
+
+
