--- a/5월 2주차/5월 12일.MD
+++ b/5월 2주차/5월 12일.MD
@@ -107,9 +107,26 @@ Get/Post/Put/Delete
 		- getServerInfo() : JSP컨테이너의 이름과 버전을 가져온다
  -->
  
+ <!-- 
+	out객체
+		JSP페이지에서 생성되는 모든 내용을 전달받는 객체이다.
+		
+		- getBufferSize()	:	버퍼의 크기
+		- getRemaining()	:	현재 버퍼에 남아있는 크기
+		- clearBuffer()		:	버퍼의 내용을 비운다.
+		- flush()			:	버퍼의 내용을 플러쉬하고 스트링을 닫는다.
+		- isAutoFlush()		:	버퍼가 가득찼을때 자동으로 플러쉬하고 true반환
+		- print()
+		- println()
+		- newLine()			:	줄바꾸기
+ -->
+ 
 ```
 
-
-
-
-
+## 에러페이지는 에러페이지 설정해줘야함
+```jsp
+<%@ page language="java" contentType="text/html; charset=UTF-8"
+    pageEncoding="UTF-8" isErrorPage="true"%>
+    
+     isErrorPage="true" 
+```
