--- a/5월 2주차/5월 12일.MD
+++ b/5월 2주차/5월 12일.MD
@@ -121,6 +121,42 @@ Get/Post/Put/Delete
 		- newLine()			:	줄바꾸기
  -->
  
+ <!-- 
+	Scope
+		웹 어플리케이션에 포함되어 있는 JSP페이지의 사용영역을 말한다.
+		
+		종류
+			- page
+				. page영역내에서 데이터를 공유할 목적으로 사용(pageContext)
+				. JSP페이지의 처음부터 끝까지를 영역으로 한다.
+				. 모든 JSP페이지는 한개의 page영역을 갖고 JSP페이지를 벗어나면 page영역을 벗어나게 된다.
+			- request
+				. 응답이 이루어질떄까지 여러 JSP페이지 안에서 데이터를 공유할 수 있다.
+				. include, forward로 페이지를 이동하고
+				. setAttribute(), get Attribute()로 값을 공유한다.
+				. 웹브라우저의 주소에 URL을 입력하거나, 링크를 클릭해서 페이지를 이동할때 웹브라우저가 웹서버에
+					요청을 전송하는 request가 생성된다. (웹브라우저가 요청을 할때마다 생성)
+				. 요청에 참여하고 있는 페이지들은 request 영역 안에 존재하게 된다.
+			
+			- session
+				. 한개의 웹브라우저에서 실행되는 모든 JSP페이지들간의 데이터를 공유할수있다.
+				. session객체를 이용해서 로그인처리가 가능하다.
+				. 웹 브라우저가 살아있는 동안에 범위를 나타낸다.
+				. 세션이 생성되면 웹브라우저를 종료할때까지 모든 요청들은 한개의 session영역에 포함된다.
+				
+			- application
+				. 웹 컨테이너(WAS) 내에서 실행되는 모든 애플리케이션들의 모든 JSP페이지들이 공유된다.
+				. 주로 웹어플리케이션 설정정보, 웹 어플리케이션 안에서 활용되어야할 데이터들을 공유용도로 사용된다.
+				. 웹컨테이너가 구동되면, 같은 웹어플리케이션에 속해 있는 모든 페이즈들은 한개의 application영역에 포함된다.
+				. 웹컨테이너가 종료되거나 재시작되면 사라진다.
+
+		메서드
+			setAttribute(String name, Object value)
+			getAttribute(String name)
+			removeAttribute(String name)
+			getAttributeNames() Enumeration
+ -->
+ 
 ```
 
 ## 에러페이지는 에러페이지 설정해줘야함
