--- a/5월 2주차/5월 12일.MD
+++ b/5월 2주차/5월 12일.MD
@@ -166,3 +166,102 @@ Get/Post/Put/Delete
     
      isErrorPage="true" 
 ```
+
+
+### 화면 2번 이동
+```jsp
+<%@page import="java.net.URLEncoder"%>
+<%@ page language="java" contentType="text/html; charset=UTF-8"
+    pageEncoding="UTF-8"%>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+	<%
+		String url = "jsp6_2.jsp?name=";
+		String e_name = URLEncoder.encode("홍길동","utf-8");
+		response.sendRedirect(url+e_name+"&age="+30);
+	%>
+</body>
+</html>
+```
+
+```jsp
+<%@page import="java.util.Date"%>
+<%@ page language="java" contentType="text/html; charset=UTF-8"
+    pageEncoding="UTF-8" import="java.io.File"%>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+	<h3>이동되어온 두번째 페이지입니다.</h3>
+	<%
+		// request객체 값 읽기
+		request.setCharacterEncoding("utf-8");
+		String name = request.getParameter("name");
+		String age = request.getParameter("age");
+		
+		// session객체 값 설정
+		session.setAttribute("ID", "JImm");
+		
+		// request객체 값 설정
+		request.setAttribute("name", name);
+		request.setAttribute("age", age);
+		request.setAttribute("request_Date", new Date());
+		
+		// application객체 값 설정
+		application.setAttribute("tmp_file", "C:\\Users\\1\\Desktop\\Directory-Hoony\\file");
+		
+		pageContext.forward("jsp6_3.jsp");
+		
+	%>
+</body>
+</html>
+```
+
+```jsp
+<%@ page language="java" contentType="text/html; charset=UTF-8"
+    pageEncoding="UTF-8"%>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+	<h3>이동되어온 세번째 페이지입니다.</h3>
+	<%
+		request.setCharacterEncoding("utf-8");
+		response.setContentType("text/html;charset=utf-8");
+	%>
+	
+	request객체-name : <%=request.getAttribute("name") %><br>
+	request객체-age : <%=request.getAttribute("age") %><br>
+	request객체-request_Date : <%=request.getAttribute("request_Date") %><br>
+	
+	<hr>
+	session객체 : <%=session.getAttribute("ID") %><br>
+	<hr>
+	application : <%=application.getAttribute("temp_file") %>
+	
+	<%
+		pageContext.forward("./jsp2_1.jsp");
+	%>
+	
+	<a href="">이동합니다.</a>
+	
+	
+</body>
+</html>
+```
+
+
+
+
+
