--- a/5월 2주차/5월 12일.MD
+++ b/5월 2주차/5월 12일.MD
@@ -157,6 +157,14 @@ Get/Post/Put/Delete
 			getAttributeNames() Enumeration
  -->
  
+ <!-- 
+	include 방법
+		. pageContext.include()	:	결과값을 가져와서 포함한다.
+		. %include file = "페이지"	:	코드를 가져와서 함께 실행시킨다.
+		
+		. jsp:include + java bean
+ -->
+ 
 ```
 
 ## 에러페이지는 에러페이지 설정해줘야함
