--- a/5월 2주차/5월 12일.MD
+++ b/5월 2주차/5월 12일.MD
@@ -165,6 +165,25 @@ Get/Post/Put/Delete
 		. jsp:include + java bean
  -->
  
+ <!-- 
+	enctype
+		- 폼 데이터가 서버로 제출될때 해당 데이터가 인코딩되는 방법을 명시한다.
+		- 이 방식은 post인 경우에만 해당한다.
+		- 종류
+			. application/x-www-form-urlencoded
+				- 모든 문자들은 서버로 보내기전에 인코딩됨을 명시함
+				- 기본값
+			. mutipart/form-data
+				- 모든 문자를 인코딩 하지 않음을 명시함
+				- 파일이나 이미지를 업로드시 서버로 전송할때 주로 사용
+
+			. text/plain
+				- Rich text : 그림이나 서식이 있는 text를 말한다.
+				- Plain text : 모든 정보가 text로만 이루어진 파일형식을 말한다.
+						. 공백문자(space)는 "+" 기호로 변환하지만, 나머지 문자는
+							모두 인코딩되지 않음을 명시함.
+ -->
+ 
 ```
 
 ## 에러페이지는 에러페이지 설정해줘야함
