--- a/5월 2주차/5월 12일.MD
+++ b/5월 2주차/5월 12일.MD
@@ -288,7 +288,40 @@ Get/Post/Put/Delete
 </html>
 ```
 
-
+### include 지시어 이용
+```jsp
+<!-- 
+	include 방법
+		. pageContext.include()	:	결과값을 가져와서 포함한다.
+		. %include file = "페이지"	:	코드를 가져와서 함께 실행시킨다.
+		
+		. jsp:include + java bean
+ -->
+<%@ page language="java" contentType="text/html; charset=UTF-8"
+    pageEncoding="UTF-8"%>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+	<hr>
+	<h3>지시어로 페이지를 추가해 봅니다.</h3>
+	<img alt="" src="./image/칼국수.jpg" width="300" height="300">
+	
+	<%@ include file="img.html" %>
+	
+	<%
+		request.setCharacterEncoding("UTF-8");
+		response.setContentType("text/html;charset=UTF-8");
+	%>
+	
+	<%@ include file="index.html" %>
+	
+</body>
+</html>
+```
 
 
 
