--- a/5월 2주차/5월 12일.MD
+++ b/5월 2주차/5월 12일.MD
@@ -323,5 +323,94 @@ Get/Post/Put/Delete
 </html>
 ```
 
+### forward이용 화면이동
+```jsp
+<%@ page language="java" contentType="text/html; charset=UTF-8"
+    pageEncoding="UTF-8"%>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+	<form action="forward1_loginCheck.jsp" method="post" enctype="application/x-www-form-urlencoded">
+		<table border="1">
+			<tr>
+				<td>
+					아 이 디 : <input type="text" name="id"><br>
+					비밀번호: <input type="password" name="pw"><br>
+				</td>
+			</tr>
+			<tr align="center">
+				<td>
+					<input type="submit" value="로그인">
+				</td>
+			</tr>
+		</table>
+	</form>
+</body>
+</html>
+```
 
+```jsp
+<%@ page language="java" contentType="text/html; charset=UTF-8"
+    pageEncoding="UTF-8"%>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+	<h3>두번째 페이지입니다. 로그인을 체크합니다.</h3>
+	<%
+		String id = request.getParameter("id");
+		String pw = request.getParameter("pw");
+		
+		out.print("아이디 : "+id+"<br>");
+		out.print("비밀번호 : "+pw+"<br>");
+		
+		request.setAttribute("아이디", "가나다");
+		request.setAttribute("패스워드", "오케이");
+		
+		pageContext.forward("forward1_resultView.jsp");
+		
+	%>
+</body>
+</html>
+```
 
+```
+<%@ page language="java" contentType="text/html; charset=UTF-8"
+    pageEncoding="UTF-8"%>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+	<h3>여기는 두번째 페이지를 거쳐 넘어온 세번째 페이지입니다.</h3>
+	<%
+		String id_loginCheck = (String)request.getAttribute("아이디");
+		String pw_loginCheck = (String)request.getAttribute("패스워드");
+		out.print("Attribute-아이디: " + id_loginCheck+"<br>");
+		out.print("Attribute-패스워드: " + pw_loginCheck+"<br>");
+	%>
+	
+	<%
+		String id = pageContext.getRequest().getParameter("id");
+		String pw = request.getParameter("pw");
+		out.print("Form입력-아이디: "+id+"<br>");
+		out.print("Form입력-패스워드: "+pw+"<br>");
+	
+	%>
+	
+	<%
+		pageContext.include("img.html");
+	%>
+	
+</body>
+</html>
+```
