--- a/5월 2주차/5월 12일.MD
+++ b/5월 2주차/5월 12일.MD
@@ -381,7 +381,7 @@ Get/Post/Put/Delete
 </html>
 ```
 
-```
+```jsp
 <%@ page language="java" contentType="text/html; charset=UTF-8"
     pageEncoding="UTF-8"%>
 <!DOCTYPE html>
