--- a/5월 3주차/5월 15일.MD
+++ b/5월 3주차/5월 15일.MD
@@ -1,42 +1,35 @@
 # Review
-오류처리
-- errorPage = "이동할 페이지"
-- isError = "true"
-- web.xml
-```xml
-<error-page>
-  <error-code>500</error-code>
-  <location>/Error/J6_Error500.html</location>
-</error-page>
+내장객체
 ```
+- pageContext
+    . forward() : 다음 페이지로 reques와 제어권을 넘긴다.
+    . include() : 다음 페이지의 결과를 가져와 포함시킨다.   vs <%@ include file="">
+                                                            <jsp:include page = "">
+                                                            <jsp:forward page = "">
 
-Request와 Response객체
-```
-왔다갔다
-```
+- application
+              <context-param>
+                <param-name> name < /param-name>
+                <param-valu> 홍길동 </param-value>
+              </context-param>
 
-Get/Post/Put/Delete
-- 검색, 생성, 추가, 초기화, 수정, 삭제
-
-페이지 전환방식 (forward, redirect)
-
-### 질의 문자열 추출
-```
-클라이언트로 부터 전달된 질의 문자열들을 서블릿에서 추출하는 방법
-
-1) String getParameter(String name)
-  - 중복되지 않고 유일하게 하나만 넘어올 때 사용한다.
-    - getParameter() 변환타입은 String이라는 점에 주의!
+    . getInitiParameter(String name) : nmae의 값을 읽어온다. (없을 때 null)
+    . getInitParameterNames()        : name목록을 가져온다 (Enumeration타입)
     
-2) String getQueryString()
-  - 질의문자열 전체를 하나의 String으로 추출해 준다.
-    - Get방식에서만 사용할 수 있다.
-    - URI정보에서 ? 다음에 나오는 문자열드를 추출해준다.
-    
-3) ServletInputStream getInputStream() throws IOException
-  - 요청정보 몸체에 있는 데이터들을 읽어오고 싶을 때
-    - Post방식의 질의 문자열 전체를 한번에 추출할 때 사용한다.
+  3. 애플리케이션 내부에 지정한 파일내용 읽어오기 : getRealPath("/폴더/상대경로")
+                                                getResource("/폴더/상대경로")
+                                                
+ - session >> 브라우저가 켜 있는 동안 공유
+ 
+ - out    . print() / println() : - 기본데이터타입/String을 출력할 수 있다. newline() - 줄 바꾸기
+          . 버퍼관계 설정 및 실행 <%@ page language = "java" contentType = "text/html; charset=UTF-8"
+                                    pageEncoding = "UTF-8" buffer="8kb" %>
+                                  
+ - exception
+
+
 ```
+
 
 
 -----------------------------------------------------
