--- a/5월 3주차/5월 15일.MD
+++ b/5월 3주차/5월 15일.MD
@@ -27,8 +27,15 @@
                                   
  - exception
 
-
 ```
+
+### Scope
+- page : JSP페이지 시작~끝
+- request : 한번의 요청영역
+- session : 웹 브라우저가 살아있는 동안
+- application : (웹 어플리케이션이 살아있는 동안)
+
+( setAttribute, getAttribute, getAttributeNames)
 
 
 
