--- a/5월 3주차/5월 15일.MD
+++ b/5월 3주차/5월 15일.MD
@@ -42,8 +42,37 @@
 -----------------------------------------------------
 
 ## 학습목표
-- PageContext > request > application > session
-- forward, include 페이지 전환
+- jsp
 
 ## 포트폴리오에 반영할 사항
 - 데이터베이스 ERD를 기준으로 입력페이지와 출력페이지를 추가 작성해놓는다.
+
+
+### 코드랑 결과값을 가져오는걸 다르게 볼때
+```jsp
+<%@ page language="java" contentType="text/html; charset=UTF-8"
+    pageEncoding="UTF-8"%>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+
+	<%@ include file="jsp1_2.jsp" %>  // 식 가져옴
+	
+	
+	<%
+		/* pageContext.include("jsp1_2.jsp"); */  // 결과값 가져
+	
+		int sum = num1+num2;
+		out.print("<h3>"+num1+"+"+num2+"="+sum+"</h3>");
+		
+	%>
+
+
+</body>
+</html>
+```
+
