--- a/5월 3주차/5월 15일.MD
+++ b/5월 3주차/5월 15일.MD
@@ -47,6 +47,39 @@
 ## 포트폴리오에 반영할 사항
 - 데이터베이스 ERD를 기준으로 입력페이지와 출력페이지를 추가 작성해놓는다.
 
+## 이론
+```jsp
+<!-- 
+	Action Tag(액션태그)
+		- jsp페이지에서 특별한 기능을 하기위해 정의해 놓은 xml형태의 태그
+		
+		- 종류
+			
+			기본 태그				액션 태그
+			--------------------------------
+			(%@ ~~~ %)			(jsp : directive)
+			(%! ~~~ %)			(jsp : declaration)
+			(% ~~~ %)			(jsp : scriptlet)
+			(%= ~~~ %)			(jsp : expression)
+			
+			(%@ include)
+		pageContext.include()	(jsp : include page = "")
+									(jsp : param name = "" value = "" /)
+								(/jsp : include)
+		
+		pageContexforward()		(jsp : forward page = "")
+									(jsp : param name = "" value = "" /)
+								(/jsp : forward)
+								 * A >>> B
+									- A페이지에는 buffer = "none"을 설정하지 않는다.
+									- A페이지에서 (jsp:forward)를 만나기전에 버퍼가 차면 안된다.
+									- A페이지에서는 B페이지로 이동할 준비작업만 처리한다.
+									
+									>> (jsp : forward)를 만나면 그때까지 출력버퍼에 저장된 내용을
+										모두 지워버리고 이동하기 때문이다.
+ -->
+```
+
 
 ### 코드랑 결과값을 가져오는걸 다르게 볼때
 ```jsp
