--- a/5월 3주차/5월 15일.MD
+++ b/5월 3주차/5월 15일.MD
@@ -77,6 +77,20 @@
 									
 									>> (jsp : forward)를 만나면 그때까지 출력버퍼에 저장된 내용을
 										모두 지워버리고 이동하기 때문이다.
+										
+	web.xml을 이용한 코드포함
+	
+	(jsp-config)
+		(jsp-property-group)
+			(url-pattern)/폴더명/* (/url-pattern)
+			(include-prelude)/포함할폴더/포함할페이지.jsp(/include-prelude)
+		(/jsp-property-group)
+		
+		(jsp-property-group)
+			(url-pattern)/폴더명/* (/url-pattern)
+			(include-prelude)/포함할폴더/포함할페이지.jsp(/include-prelude)
+		(/jsp-property-group)
+	(jsp-confog)
  -->
 ```
 
