--- a/5월 3주차/5월 15일.MD
+++ b/5월 3주차/5월 15일.MD
@@ -123,3 +123,64 @@
 </html>
 ```
 
+### getParameter, getParameterValues는 다르다 앞에껀 하나만 뒤에껀 전부 다
+```jsp
+<%@ page language="java" contentType="text/html; charset=UTF-8"
+    pageEncoding="UTF-8"%>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+	<% request.setCharacterEncoding("utf-8"); %> <!-- 파라미터로 넘기는 값은 인코딩 설정해줘야한다. -->
+	<h3>첫번째 페이지</h3>
+	<hr>
+	<jsp:include page="jsp3_2.jsp">
+		<jsp:param name="name" value="홍길동" />
+		<jsp:param name="name" value="강길동" />
+		<jsp:param name="phone" value="010-1234-5678"/>
+	</jsp:include>
+	<hr>
+</body>
+</html>
+```
+
+```
+<%@ page language="java" contentType="text/html; charset=UTF-8"
+    pageEncoding="UTF-8"%>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<style type="text/css">
+	div{
+		width: 500px;
+		height: 300px;
+		background-color: skyblue;
+	}
+
+</style>
+</head>
+<body>
+	<div>
+		<h3>포험될 sub페이지</h3>
+		이   름 : <%=request.getParameter("name") %><br> <!-- 얘는 하나만 나옴 -->
+		연락처 : <%=request.getParameter("phone") %> 
+		<%
+		
+			out.print("<hr><br>이 름: ");
+			String[] names = request.getParameterValues("name"); /* 얘는 다 나옴 */
+			
+			for(int i=0;i<names.length;i++){
+				out.print(names[i]+ " ");
+			}
+		%>
+	
+		
+	</div>
+</body>
+</html>
+```
