--- a/5월 3주차/5월 15일.MD
+++ b/5월 3주차/5월 15일.MD
@@ -184,3 +184,29 @@
 </body>
 </html>
 ```
+
+### 자기페이지에서 쓰려면 pageContext 쓰기하는데 잘 안쓰임
+```jsp
+<%@ page language="java" contentType="text/html; charset=UTF-8"
+    pageEncoding="UTF-8"%>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+	<%
+		request.setCharacterEncoding("utf-8");
+		pageContext.setAttribute("name", "홍길동");
+		pageContext.setAttribute("score", 80);
+	%>
+	
+	<%= pageContext.getAttribute("name") %>님의 학점은 
+	<%= pageContext.getAttribute("score") %>입니다.
+	
+</body>
+</html>
+```
+
+
