--- a/5월 3주차/5월 15일.MD
+++ b/5월 3주차/5월 15일.MD
@@ -92,6 +92,31 @@
 		(/jsp-property-group)
 	(jsp-confog)
  -->
+ 
+ <!-- 
+	자바빈(JavaBeans)
+		. JSP에서 사용할 목적으로 만든 클래스
+		. 뷰의 프리젠테이션부분과 비즈니스로직처리부분을 분리하기 위한 목적
+		. 한번 만든 자바빈은 다른 프로그램에서도 재활용할 수 있다.
+		
+		요청 -------- 처리 -------- 출력(뷰)
+					(비즈니스로직)		(프리젠테이션)
+		html		java+jsp		html/jsp
+		
+
+			- ~.java(클래스)
+				. get~, set~ 메서드를 정의해 놓는다.
+				. 생성자에 매개변수가 있는 생성자를 구현해 놓으려면 기본생성자를 만들어놓아야한다.
+				. get ~ 메서드에는 파라미터가 없어야 한다. 리턴타입을 가져야 한다. 
+				. set ~ 메서드에는 하나의  파라미터값이 있어야 한다.
+				. 이외는 사용자의 정의에 의한다.
+				
+			- jsp
+			(jsp : useBean id="" class="" scope="")
+			(jsp : setProperty name="" value=""/)
+			(jsp : getProperty name="" /)
+ -->
+ 
 ```
 
 
@@ -209,4 +234,6 @@
 </html>
 ```
 
-### sendRedirect는 강제이동 시킬때 사
+### sendRedirect는 강제이동 시킬때 사용한다.
+
+
