--- a/5월 3주차/5월 15일.MD
+++ b/5월 3주차/5월 15일.MD
@@ -47,6 +47,8 @@
 ## 포트폴리오에 반영할 사항
 - 데이터베이스 ERD를 기준으로 입력페이지와 출력페이지를 추가 작성해놓는다.
 
+### sendRedirect는 강제이동 시킬때 사용한다.
+
 ## 이론
 ```jsp
 <!-- 
@@ -234,6 +236,136 @@
 </html>
 ```
 
-### sendRedirect는 강제이동 시킬때 사용한다.
 
 
+## 상품입력하기
+```java
+package javabean;
+
+public class Product {
+	
+	private String code;
+	private String name;
+	private int price;
+	private int stock;
+	
+	public String getCode() {
+		return code;
+	}
+	public void setCode(String code) {
+		this.code = code;
+	}
+	public String getName() {
+		return name;
+	}
+	public void setName(String name) {
+		this.name = name;
+	}
+	public int getPrice() {
+		return price;
+	}
+	public void setPrice(int price) {
+		this.price = price;
+	}
+	public int getStock() {
+		return stock;
+	}
+	public void setStock(int stock) {
+		this.stock = stock;
+	}
+
+
+}
+
+```
+
+```jsp
+
+<%@ page language="java" contentType="text/html; charset=UTF-8"
+    pageEncoding="UTF-8"%>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+	<form action="jsp3_2.jsp">
+		상품코드 : <input type="text" name="code" required><br>
+		상품명 : <input type="text" name="name" required><br>
+		상품가격 : <input type="text" name="price"><br>
+		재고수량 : <input type="text" name="stock"><p>
+		<input type="submit" value="등록하기">
+		
+	
+	</form>
+
+</body>
+</html>
+```
+
+```jsp
+<%@ page language="java" contentType="text/html; charset=UTF-8"
+    pageEncoding="UTF-8"%>
+<% request.setCharacterEncoding("utf-8"); %>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+	<jsp:useBean id="product1" class="javabean.Product" scope="request"/>
+	<jsp:setProperty property="code" name="product1"/>
+	<jsp:setProperty property="name" name="product1"/>
+	<jsp:setProperty property="price" name="product1"/>
+	<jsp:setProperty property="stock" name="product1"/>
+
+	상품코드 : <jsp:getProperty property="code" name="product1"/><br>
+	상품명 : <jsp:getProperty property="name" name="product1"/><br>
+	상품가격 : <jsp:getProperty property="price" name="product1"/><br>
+	재고수량 : <jsp:getProperty property="stock" name="product1"/><br>
+
+	<jsp:forward page="jsp3_3result.jsp"></jsp:forward>
+
+</body>
+</html>
+```
+
+```jsp
+<%@page import="javabean.Product"%>
+<%@ page language="java" contentType="text/html; charset=UTF-8"
+    pageEncoding="UTF-8"%>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+	<h3>상품 결과값 출력</h3>
+	<jsp:useBean id="product1" class="javabean.Product" scope="request"/>
+	상품코드 : <jsp:getProperty property="code" name="product1"/><br>
+	상품명 : <jsp:getProperty property="name" name="product1"/><br>
+	상품가격 : <jsp:getProperty property="price" name="product1"/><br>
+	재고수량 : <jsp:getProperty property="stock" name="product1"/><br> 
+	
+	<%
+		Product product = new Product();
+		
+		product.setCode(request.getParameter("code"));
+		product.setName(request.getParameter("name"));
+		product.setPrice(Integer.parseInt(request.getParameter("price")));
+		product.setStock(Integer.parseInt(request.getParameter("stock")));
+	
+	%>
+	
+	<%=product.getCode() %><br>
+	<%=product.getName() %><br>
+	<%=product.getPrice() %><br>
+	<%=product.getStock() %>
+	
+
+</body>
+</html>
+```
