--- a/5월 3주차/5월 16일.MD
+++ b/5월 3주차/5월 16일.MD
@@ -1,43 +1,17 @@
 # Review
-내장객체
-```
-- pageContext
-    . forward() : 다음 페이지로 reques와 제어권을 넘긴다.
-    . include() : 다음 페이지의 결과를 가져와 포함시킨다.   vs <%@ include file="">
-                                                            <jsp:include page = "">
-                                                            <jsp:forward page = "">
+자바 빈(JavaBeans)
+- 자바빈 ? JSP에서 사용할 목적으로 사용자가 정의한 자바클래스를 의미한다.
+- 프리젠테이션 부분과 비즈니스로직 부분을 분리하기 위한 목적이다.
 
-- application
-              <context-param>
-                <param-name> name < /param-name>
-                <param-valu> 홍길동 </param-value>
-              </context-param>
+자바 빈 설계규약
+- 자바빈 클래스에 생성자를 넣으려면 파라미터가 없는 기본생성자를 반드시 포함해둬야한다.
+- 자바빈 클래스의 모든 속성에 대해 getter, setter메서드를 정의해야 한다.
 
-    . getInitiParameter(String name) : nmae의 값을 읽어온다. (없을 때 null)
-    . getInitParameterNames()        : name목록을 가져온다 (Enumeration타입)
-    
-  3. 애플리케이션 내부에 지정한 파일내용 읽어오기 : getRealPath("/폴더/상대경로")
-                                                getResource("/폴더/상대경로")
-                                                
- - session >> 브라우저가 켜 있는 동안 공유
- 
- - out    . print() / println() : - 기본데이터타입/String을 출력할 수 있다. newline() - 줄 바꾸기
-          . 버퍼관계 설정 및 실행 <%@ page language = "java" contentType = "text/html; charset=UTF-8"
-                                    pageEncoding = "UTF-8" buffer="8kb" %>
-                                  
- - exception
-
-```
-
-### Scope
-- page : JSP페이지 시작~끝
-- request : 한번의 요청영역
-- session : 웹 브라우저가 살아있는 동안
-- application : (웹 어플리케이션이 살아있는 동안)
-
-( setAttribute, getAttribute, getAttributeNames)
-
-
+scope
+- page : 디폴트, 현재 JSP페이지 -> 페이지 바뀌면 객체 사라짐
+- request : request 최종 포워딩되는 페이지까지
+- session : session 내장 객체가 유지될 때까지 -> 모든 JSP페이지에서 자바빈 객체 공유
+- application : 웹 컨테이너가 종료될 때까지 -> 현재 실행중인 모든 JSP페이지에서 공유
 
 -----------------------------------------------------
 
